sfdx/nibs-sfdx/main/default/objects/Product2/fields/pic__c.field-meta.xml
<CustomField>
    <fullName>pic__c</fullName>
    <formula>image(image__c, &#39;image&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>