sfdx/nibs-sfdx/main/default/objects/Product2/fields/productPage__c.field-meta.xml
<CustomField>
    <fullName>productPage__c</fullName>
    <label>Product Page</label>
    <type>Url</type>
</CustomField>