sfdx/nibs-sfdx/main/default/objects/Product2/fields/publishDate__c.field-meta.xml
<CustomField>
    <fullName>publishDate__c</fullName>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>